Closed Bug 552011 Opened 14 years ago Closed 14 years ago

Dialog crash fix + Qt widget cleanup

Categories

(Core Graveyard :: Widget: Qt, defect)

1.9.2 Branch
Other
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: romaxa)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Dialog fixes, + widget clenaup (obsolete) — Splinter Review
We are not handling properly Dialog windows/widgets, we should create QGW if dialog parented with existing window, and make new QGV in case if dialog created without parent widget.

Also this pathc has more simple QGV initialization with helper classes.
Attachment #432192 - Flags: review?(dougt)
Comment on attachment 432192 [details] [diff] [review]
Dialog fixes, + widget clenaup

+        }
+
+        if (aEvent->type() == QEvent::WindowDeactivate) {

else if


+            mTopLevelWidget->setGeometry( 0.0, 0.0,


No space before the first argument


+            QApplication::postEvent(mTopLevelWidget, new QCloseEvent(*aEvent));

Who cleans up this allocation?



In MozQGraphicsViewEvents methods, please check the parameters for null before using them
Attachment #432192 - Flags: review?(dougt) → review-
> Who cleans up this allocation?

Does it help?
http://qt.nokia.com/doc/4.6/qcoreapplication.html#postEvent
Attached patch Fixed commentSplinter Review
Assignee: nobody → romaxa
Attachment #432192 - Attachment is obsolete: true
Attachment #432208 - Flags: review?(dougt)
(In reply to comment #1)
> (From update of attachment 432192 [details] [diff] [review])
> +        }
> +
> +        if (aEvent->type() == QEvent::WindowDeactivate) {
> 
> else if

Nothing, this is handled in MozQGraphicsView::event as QGraphicsView::event
Attachment #432208 - Flags: review?(dougt) → review+
Landed in:
http://hg.mozilla.org/mozilla-central/rev/d89d0bb1a51c
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: