Bug 552011 - Dialog crash fix + Qt widget cleanup. r=dougt. Landed on CLOSED TREE.