widget/src/qt/mozqwidget.h
@@ -32,6 +32,8 @@ public:
     void activate();
     void deactivate();
 
+    QVariant inputMethodQuery(Qt::InputMethodQuery aQuery) const;
+
 protected:
     virtual void contextMenuEvent(QGraphicsSceneContextMenuEvent* aEvent);
     virtual void dragEnterEvent(QGraphicsSceneDragDropEvent* aEvent);
@@ -49,18 +51,78 @@ protected:
     virtual void mouseMoveEvent(QGraphicsSceneMouseEvent* aEvent);
     virtual void mousePressEvent(QGraphicsSceneMouseEvent* aEvent);
     virtual void mouseReleaseEvent(QGraphicsSceneMouseEvent* aEvent);
- 
+
     virtual void wheelEvent(QGraphicsSceneWheelEvent* aEvent);
     virtual void paint(QPainter* aPainter, const QStyleOptionGraphicsItem* aOption, QWidget* aWidget = 0);
     virtual void resizeEvent(QGraphicsSceneResizeEvent* aEvent);
     virtual void closeEvent(QCloseEvent* aEvent);
     virtual void hideEvent(QHideEvent* aEvent);
     virtual void showEvent(QShowEvent* aEvent);
- 
+
     bool SetCursor(const QPixmap& aPixmap, int, int);
 
 private:
     nsWindow *mReceiver;
+};
+
+class MozQGraphicsViewEvents
+{
+public:
+
+    MozQGraphicsViewEvents(QGraphicsView* aView, MozQWidget* aTopLevel)
+     : mTopLevelWidget(aTopLevel)
+     , mView(aView)
+    { }
+
+    void handleEvent(QEvent* aEvent)
+    {
+        if (!aEvent)
+            return;
+        if (aEvent->type() == QEvent::WindowActivate) {
+            if (mTopLevelWidget)
+                mTopLevelWidget->activate();
+        }
+
+        if (aEvent->type() == QEvent::WindowDeactivate) {
+            if (mTopLevelWidget)
+                mTopLevelWidget->deactivate();
+        }
+    }
+
+    void handleResizeEvent(QResizeEvent* aEvent)
+    {
+        if (!aEvent)
+            return;
+        if (mTopLevelWidget) {
+            // transfer new size to graphics widget
+            mTopLevelWidget->setGeometry(0.0, 0.0,
+                static_cast<qreal>(aEvent->size().width()),
+                static_cast<qreal>(aEvent->size().height()));
+            // resize scene rect to vieport size,
+            // to avoid extra scrolling from QAbstractScrollable
+            if (mView)
+                mView->setSceneRect(mView->viewport()->rect());
+        }
+    }
+
+    bool handleCloseEvent(QCloseEvent* aEvent)
+    {
+        if (!aEvent)
+            return false;
+        if (mTopLevelWidget) {
+            // close graphics widget instead, this view will be discarded
+            // automatically
+            QApplication::postEvent(mTopLevelWidget, new QCloseEvent(*aEvent));
+            aEvent->ignore();
+            return true;
+        }
+
+        return false;
+    }
+
+private:
+    MozQWidget* mTopLevelWidget;
+    QGraphicsView* mView;
 };
 
 /**
@@ -73,62 +135,35 @@ class MozQGraphicsView : public QGraphicsView
     Q_OBJECT
 
 public:
-    MozQGraphicsView(QGraphicsScene* aScene, QWidget * aParent = nsnull)
-     : QGraphicsView (aScene, aParent)
-     , mTopLevelWidget(0)
-    { }
-
-    void setTopLevel(MozQWidget* aTopLevel)
+    MozQGraphicsView(MozQWidget* aTopLevel, QWidget * aParent = nsnull)
+     : QGraphicsView (new QGraphicsScene(), aParent)
+     , mEventHandler(this, aTopLevel)
     {
-        mTopLevelWidget = aTopLevel;
+        scene()->addItem(aTopLevel);
     }
 
 protected:
 
     virtual bool event(QEvent* aEvent)
     {
-        if (aEvent->type() == QEvent::WindowActivate) {
-            if (mTopLevelWidget)
-                mTopLevelWidget->activate();
-        }
-
-        if (aEvent->type() == QEvent::WindowDeactivate) {
-            if (mTopLevelWidget)
-                mTopLevelWidget->deactivate();
-        }
-
+        mEventHandler.handleEvent(aEvent);
         return QGraphicsView::event(aEvent);
     }
 
     virtual void resizeEvent(QResizeEvent* aEvent)
     {
-        if (mTopLevelWidget) {
-            // transfer new size to graphics widget
-            mTopLevelWidget->setGeometry( 0.0, 0.0,
-                static_cast<qreal>(aEvent->size().width()),
-                static_cast<qreal>(aEvent->size().height()));
-            // resize scene rect to vieport size,
-            // to avoid extra scrolling from QAbstractScrollable
-            setSceneRect(viewport()->rect());
-
-        }
+        mEventHandler.handleResizeEvent(aEvent);
         QGraphicsView::resizeEvent(aEvent);
     }
 
     virtual void closeEvent (QCloseEvent* aEvent)
     {
-        if (mTopLevelWidget) {
-            // close graphics widget instead, this view will be discarded
-            // automatically
-            QApplication::postEvent(mTopLevelWidget, new QCloseEvent(*aEvent));
-            aEvent->ignore();
-        } else {
+        if (!mEventHandler.handleCloseEvent(aEvent))
             QGraphicsView::closeEvent(aEvent);
-        }
     }
 
 private:
-    MozQWidget* mTopLevelWidget;
+    MozQGraphicsViewEvents mEventHandler;
 };
 
 #endif
